# rock_ptarmigan

./: .env  .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  run.py  setup.py
analyze/: README.md  approximate.py  if_approximate.py  if_approximate_mix.py  if_approximate_test.py  if_approximate_train.py  numeric_calc.py  pca_approximate.py  pca_test.py
lib/: main.py
model/: README.md  coin.py  model.py  scratch.py
rock_ptarmigan/: __init__.py  main.py
wiki/: README.md
